// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Pruebas sobre GifGrid GifGrid debe hacer match con su snapshot  1`] = `
<Fragment>
  <h2
    className="animate__jello"
  >
    One Punch
  </h2>
  <p
    className="animate__flash"
  >
    Loading..
  </p>
  <div
    className="card-grid"
  />
</Fragment>
`;

exports[`Pruebas sobre GifGrid debe mostrar items cuando se cargan imagenes useFetchGifs  1`] = `
<Fragment>
  <h2
    className="animate__jello"
  >
    One Punch
  </h2>
  <div
    className="card-grid"
  >
    <GifGridItem
      id="ABC"
      key="ABC"
      title="texto"
      url="https://localhost/probandoimagen.jpg"
    />
  </div>
</Fragment>
`;
